--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="content"></div>
-    <script src="../dist/bundle.js" type="text/javascript"></script>
+    <!-- <div id="content"></div> -->
+    <script src="../../client/src/index.js" type="text/javascript"></script>
 </body>
 </html>
