--- a/client/style.css
+++ b/client/style.css
@@ -19,3 +19,22 @@ h1 {
 h3 {
     font-size: 1rem;
   }
+
+.searchBorder {
+  border:6px solid rgba(0, 0, 0, 0);
+  border-block-end-color:rgba(0, 0, 0, 0);
+  border-bottom-left-radius:0px;
+  border-bottom-right-radius:8px;
+  border-collapse:separate;
+  border-end-end-radius:8px;
+  border-end-start-radius:0px;
+  border-image-outset:0;
+  border-image-repeat:stretch;
+  border-image-slice:15;
+  border-image-source:url(https://stardewvalleywiki.com/mediawiki/extensions/StardewValley/images/menu_border.png);
+  border-image-width:1;
+  border-start-end-radius:8px;
+  border-start-start-radius:0px;
+  border-top-left-radius:0px;
+  border-top-right-radius:8px;
+}
